--- a/static/my-love/index.html
+++ b/static/my-love/index.html
@@ -23,7 +23,7 @@
         <link rel="modulepreload" href="img/15.jpeg" as="image">
     </head>
     <body>
-        <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
+        <!-- <div id="mobile" :class="{ 'has-prompt': hasPrompt }">
             <div id="mobile-head">
                 <div id="mobile-head-title">与小 cc 聊天中</div>
             </div>
@@ -86,6 +86,7 @@
         <script src="//cdn.bootcss.com/zepto/1.2.0/zepto.min.js"></script>
         <script src="//cdn.bootcss.com/vue/2.2.6/vue.min.js"></script>
 
-        <script src="js/index-min.js"></script>
+        <script src="js/index-min.js"></script> -->
+      <p>好走，之后快快乐乐的</p>
     </body>
 </html>
